--- a/resources/assets/sass/variables/_colors.scss
+++ b/resources/assets/sass/variables/_colors.scss
@@ -3,14 +3,13 @@
 // For project colors.
 // ======
 
-$blue: #33aaff;
+$blue: #1c90f3;
 $red: #ff0000;
+$green: #42b983;
+$light-gray: #f8f8f8;
+$gray: darken($light-gray, 5%);
+$dark-gray: darken($light-gray, 20%);
 $white: #FFF;
 $black: #333;
-$gold: #ffe400;
-$silver: silver;
-$bronze: #cd7f32;
-$light-gray: #fafafa;
-$dark-gray: #666;
 
 $border-color: #e0e0e0;
