--- a/resources/assets/sass/helpers/_helpers.scss
+++ b/resources/assets/sass/helpers/_helpers.scss
@@ -16,133 +16,64 @@
 }
 
 .o-list-4 {
-  @extend .clearfix;
+  display: flex;
+  flex-flow: row wrap;
 
   .o-list-item {
-    float: left;
-    width: 25% - 6% / 4;
-    margin: 0 2% $space-small 0;
+    flex: 0 1 25%;
+    padding: 0 $space-small $space-small 0;
 
     &:nth-child(4n) {
-      margin-right: 0;
+      padding-right: 0;
     }
   }
 
   @media (max-width: $breakpoint-md) {
     .o-list-item {
-      width: 49%;
-      margin-bottom: $space-xsmall;
-
-      &:nth-child(4n) {
-        margin-right: 2%;
-      }
+      flex: 0 1 50%;
 
       &:nth-child(2n) {
-        margin-right: 0;
+        padding-right: 0;
       }
     }
   }
 
   @media (max-width: $breakpoint-xs) {
-    .o-list-item {
-      @include float-none;
-      margin-right: 0;
+    flex-flow: column wrap;
 
-      .img {
-        width: 100%;
-      }
+    .o-list-item {
+      flex: 1;
+      padding-right: 0;
     }
   }
 }
 
-.o-list-3 {
-  @extend .clearfix;
+.o-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .6);
 
-  .o-list-item {
-    float: left;
-    width: 1 / 3 * 100% - 4% / 3;
-    margin: 0 2% $space-small 0;
+  .o-overlay-content {
+    position: relative;
+    width: 500px;
+    margin: 50px auto 80px auto;
+    padding: $space-small;
 
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
-  }
+    .title-wrapper {
+      display: flex;
+      justify-content: space-between;
 
-  @media (max-width: $breakpoint-md) {
-    .o-list-item {
-      width: 49%;
-      margin-bottom: $space-xsmall;
-
-      &:nth-child(3n) {
-        margin-right: 2%;
+      .title {
+        font-size: 20px;
       }
 
-      &:nth-child(2n) {
-        margin-right: 0;
-      }
-    }
-  }
-
-  @media (max-width: $breakpoint-xs) {
-    .o-list-item {
-      @include float-none;
-      margin-right: 0;
-
-      .img {
-        width: 100%;
-      }
-    }
-  }
-}
-
-.o-list-2 {
-  @extend .clearfix;
-
-  .o-list-item {
-    float: left;
-    width: 49%;
-    margin: 0 2% $space-small 0;
-
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-  }
-
-  @media (max-width: $breakpoint-xs) {
-    .o-list-item {
-      @include float-none;
-      margin-right: 0;
-
-      .img {
-        width: 100%;
-      }
-    }
-  }
-}
-
-.o-list-1-2 {
-  @extend .clearfix;
-
-  .o-list-item-1 {
-    float: right;
-    width: 1 / 3 * 100% - 1%;
-    margin: 0 0 $space-small 0;
-  }
-
-  .o-list-item-2 {
-    float: left;
-    width: 2 / 3 * 100% - 1%;
-    margin: 0 2% 0 0;
-  }
-
-  @media (max-width: $breakpoint-xs) {
-    .o-list-item-1,
-    .o-list-item-2 {
-      @include float-none;
-      margin-right: 0;
-
-      .img {
-        width: 100%;
+      .close-btn {
+        align-items: center;
+        cursor: pointer;
+        font-size: 26px;
       }
     }
   }
