Add buttons to delete checklist element

--- a/resources/assets/sass/pages/_promise.scss
+++ b/resources/assets/sass/pages/_promise.scss
@@ -206,7 +206,22 @@
         }
       }
 
+      &.checklist-flex {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
+        .delete-btn {
+          display: none;
+          font-size: 20px;
+          color: $dark-gray;
+          cursor: pointer;
+        }
+
+        &:hover .delete-btn {
+          display: block;
+        }
+      }
     }
 
     .btn-secondary {
