Add frontend for showing wishes

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,6 +17,7 @@
 // Pages
 @import "pages/general";
 @import "pages/top_nav";
-@import "pages/promise";
+@import "pages/promises";
+@import "pages/wishes";
 
 // Node modules
