--- a/resources/assets/sass/helpers/_helpers.scss
+++ b/resources/assets/sass/helpers/_helpers.scss
@@ -10,9 +10,31 @@
 }
 
 .card {
+  padding: $space-small;
   border-radius: $border-radius-base;
   box-shadow: 0 1px 10px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
   background-color: $white;
+
+  .card-title {
+    margin-bottom: $space-xsmall;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .card-description {
+    min-height: 30px;
+  }
+
+  .card-img {
+    height: 100px;
+    margin-bottom: $space-xsmall * 2;
+    overflow: hidden;
+    border-radius: 3px;
+
+    img {
+      @include img-cover(100%);
+    }
+  }
 }
 
 .o-list-4 {
