--- a/resources/assets/sass/pages/_top_nav.scss
+++ b/resources/assets/sass/pages/_top_nav.scss
@@ -12,9 +12,19 @@
       display: inline-block;
       margin-left: 10px;
       font-size: 18px;
+      vertical-align: top;
 
       &:first-child {
         margin-left: 0;
+      }
+
+      &.active {
+
+        .menu-link {
+          padding: 8px;
+          border-radius: 3px;
+          background-color: darken($green, 5%);
+        }
       }
     }
 
