--- a/resources/assets/sass/helpers/_helpers.scss
+++ b/resources/assets/sass/helpers/_helpers.scss
@@ -10,6 +10,7 @@
 }
 
 .card {
+  position: relative;
   padding: $space-small;
   border-radius: $border-radius-base;
   box-shadow: 0 1px 10px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
@@ -23,6 +24,7 @@
 
   .card-description {
     min-height: 30px;
+    color: $text-color-secondary;
   }
 
   .card-img {
