--- a/resources/assets/sass/pages/_wishes.scss
+++ b/resources/assets/sass/pages/_wishes.scss
@@ -1,13 +1,49 @@
 .wishes-page {
   margin-top: 40px;
 
-  .wish-purchase-btn {
-    @include button($green);
-    width: 100%;
-    font-size: 18px;
+  .wish-list {
 
-    i {
-      margin-right: 4px;
+    .wish-item {
+      &:hover {
+        .delete-btn {
+          display: block;
+        }
+      }
+    }
+
+    .card-title {
+      margin-bottom: $space-xsmall * 2;
+      font-size: 16px;
+    }
+
+    .delete-btn {
+      display: none;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: $black;
+      color: $white;
+      font-size: 12px;
+      line-height: 20px;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    .wish-purchase-btn {
+      @include button($dark-gray);
+      width: 100%;
+      font-size: 18px;
+
+      &.active {
+        @include button($green);
+      }
+
+      i {
+        margin-right: 4px;
+      }
     }
   }
 }
