--- a/resources/assets/sass/helpers/_helpers.scss
+++ b/resources/assets/sass/helpers/_helpers.scss
@@ -9,25 +9,47 @@
   clear: both;
 }
 
-.card {
+.o-card {
   position: relative;
   padding: $space-small;
   border-radius: $border-radius-base;
   box-shadow: 0 1px 10px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
   background-color: $white;
 
-  .card-title {
+  .o-card-title {
     margin-bottom: $space-xsmall;
     font-size: 20px;
     font-weight: 500;
   }
 
-  .card-description {
+  .o-card-description {
     min-height: 30px;
     color: $text-color-secondary;
   }
 
-  .card-img {
+  .o-card-delete-btn {
+    display: none;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: $black;
+    color: $white;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    cursor: pointer;
+  }
+
+  &:hover {
+    .o-card-delete-btn {
+      display: block;
+    }
+  }
+
+  .o-card-img {
     height: 100px;
     margin-bottom: $space-xsmall * 2;
     overflow: hidden;
@@ -35,6 +57,16 @@
 
     img {
       @include img-cover(100%);
+    }
+  }
+
+  .o-card-btn {
+    @include button($green);
+    width: 100%;
+    font-size: 18px;
+
+    i {
+      margin-right: 4px;
     }
   }
 }
