--- a/resources/assets/sass/pages/_wishes.scss
+++ b/resources/assets/sass/pages/_wishes.scss
@@ -2,8 +2,8 @@
 
   .wish-list {
 
-    .card-title {
-      margin-bottom: $space-xsmall * 2;
+    .title {
+      margin: $space-small 0;
       font-size: 16px;
     }
 
@@ -14,6 +14,10 @@
 
       &.active {
         @include button($green);
+      }
+
+      i {
+        margin-right: 4px;
       }
     }
   }
