--- a/resources/assets/sass/variables/_colors.scss
+++ b/resources/assets/sass/variables/_colors.scss
@@ -6,6 +6,7 @@
 $blue: #1c90f3;
 $red: #ff0000;
 $green: #42b983;
+$orange: #ffa520;
 $light-gray: #f8f8f8;
 $gray: darken($light-gray, 5%);
 $dark-gray: darken($light-gray, 20%);
@@ -15,4 +16,4 @@ $black: #333;
 $border-color: #e0e0e0;
 
 $text-color: $black;
-$text-color-secondary: lighten($black, 10%);
+$text-color-secondary: lighten($black, 15%);
