--- a/resources/assets/sass/pages/_promises.scss
+++ b/resources/assets/sass/pages/_promises.scss
@@ -15,6 +15,24 @@
     }
   }
 
+  .task-list {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    .task-title {
+      margin-bottom: $space-small;
+    }
+
+    .habit-list {
+      width: 20%;
+    }
+
+    .promise-list {
+      width: 78%;
+    }
+  }
+
   .promise-list {
     .promise-item {
       position: relative;
@@ -27,17 +45,8 @@
       }
 
       .reward-points {
-        height: 100px;
-        width: 100px;
-        margin-bottom: $space-xsmall * 2;
-        border-radius: 3px;
-        background-color: $dark-gray;
-        text-align: center;
 
         .reward-content {
-          line-height: 100px;
-          color: #FFF;
-          font-size: 24px;
 
           i {
             margin-right: 4px;
@@ -258,6 +267,90 @@
       @include button($green);
       margin-bottom: $space-small * 2;
       font-size: 20px;
+    }
+  }
+
+  .habit-list {
+
+    .habit-item {
+      width: 100%;
+      margin-bottom: $space-small;
+    }
+
+    .habit-content {
+      display: flex;
+      justify-content: space-between;
+
+      .habit-text {
+        width: 70%;
+
+        .habit-credits-wrapper {
+          margin-top: $space-xsmall;
+
+          .habit-credits {
+            i {
+              margin-right: 4px;
+            }
+          }
+
+          .habit-bonus {
+            margin-left: 4px;
+            padding: 2px 8px;
+            background-color: $green;
+            color: $white;
+            border-radius: 6px;
+          }
+        }
+      }
+
+      .habit-btn {
+        width: 30%;
+
+        button {
+          @include button($green);
+          margin: auto;
+          padding: 0;
+          width: 60px;
+          height: 60px;
+          border-radius: 50%;
+          border: 3px solid $white;
+          box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 3px rgba(0,0,0,.24);
+        }
+
+        &.checked {
+          button {
+            background-color: $dark-gray;
+            box-shadow: none;
+            cursor: default;
+          }
+        }
+      }
+    }
+
+    .habit-streak {
+      height: 10px;
+      margin-top: $space-small;
+      background-color: $gray;
+
+      .streak-item {
+        display: inline-block;
+        height: 10px;
+        width: 1 / 7 * 100% - 6% / 7;
+        margin-right: 1%;
+        background-color: $green;
+        vertical-align: top;
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+
+      &.streak {
+
+        .streak-item {
+          background-color: $orange;
+        }
+      }
     }
   }
 }
