Be able to update habit
update habit and promise css

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,6 +17,8 @@
 // Pages
 @import "pages/general";
 @import "pages/top_nav";
+@import "pages/dashboard";
+@import "pages/habits";
 @import "pages/promises";
 @import "pages/wishes";
 @import "pages/wish_tickets";
