--- a/resources/assets/sass/pages/_promises.scss
+++ b/resources/assets/sass/pages/_promises.scss
@@ -1,358 +1,210 @@
-.promise-page {
+.promise-create-form {
+  .form-reward {
 
-  .promise-create-form {
-    .form-reward {
-
-      .label-item {
-        width: 60px;
-
-        i {
-          display: block;
-          margin-bottom: 4px;
-          font-size: 20px;
-        }
-      }
-    }
-  }
-
-  .task-list {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-
-    .task-title {
-      margin-bottom: $space-small;
-    }
-
-    .habit-list {
-      width: 20%;
-    }
-
-    .promise-list {
-      width: 78%;
-    }
-  }
-
-  .promise-list {
-    .promise-item {
-      position: relative;
-      height: 100%;
-      cursor: pointer;
-
-      &:hover {
-        background-color: darken(white, 5%);
-        transition: all .3s;
-      }
-
-      .reward-points {
-
-        .reward-content {
-
-          i {
-            margin-right: 4px;
-          }
-        }
-      }
-
-      .progress-bar {
-        position: relative;
-        height: 10px;
-        margin-top: $space-xsmall * 2;
-        background-color: $gray;
-        border-radius: 2px;
-
-        .progress-bar-current {
-          position: absolute;
-          top: 0;
-          bottom: 0;
-          left: 0;
-          background-color: $green;
-          border-radius: 2px;
-        }
-      }
-
-      .stamp-completed {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        bottom: 10px;
-        left: 10px;
-        opacity: .3;
-        color: $green;
-        font-size: 200px;
-        text-align: center;
-      }
-    }
-  }
-
-  .promise {
-    font-size: 16px;
-
-    .title {
-      border: none;
-      font-size: 20px;
-      font-weight: 500;
-    }
-
-    .description {
-      min-height: 40px;
-      width: 100%;
-      margin-top: $space-xsmall;
-      border: none;
-      resize: none;
-    }
-
-    .checkbox-wrapper {
-      margin-bottom: $space-xsmall;
-
-      &:first-child {
-        margin-top: $space-xsmall * 2;
-      }
-
-      .checkbox {
-        width: 36px;
-        appearance: none;
-        cursor: pointer;
-
-        &:focus {
-          outline: none;
-        }
-
-        &:before {
-          display: inline-block;
-          font-family: FontAwesome;
-          font-size: 30px;
-          content: "\f096";
-          font-weight: 200;
-          color: darken($dark-gray, 10%);
-        }
-
-        &:checked:before {
-          font-family: FontAwesome;
-          content: "\f046";
-          color: $green;
-        }
-
-        &.last {
-          margin-right: -4px;
-        }
-      }
-
-      .checkbox-static {
-        width: 36px;
-        cursor: pointer;
-        color: $green;
-        font-size: 30px;
-      }
-
-      &.checklist {
-        margin-bottom: 2px;
-
-        .checkbox,
-        .checkbox-static {
-          width: 20px;
-          margin-right: 6px;
-
-          &:before {
-            vertical-align: middle;
-            font-size: 24px;
-          }
-        }
-
-        .checkbox-static {
-          vertical-align: middle;
-          font-size: 24px;
-        }
-
-        .label-static {
-          vertical-align: middle;
-        }
-      }
-
-      &.checklist-flex {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        .delete-btn {
-          display: none;
-          font-size: 20px;
-          color: $dark-gray;
-          cursor: pointer;
-        }
-
-        &:hover .delete-btn {
-          display: block;
-        }
-      }
-    }
-
-    .btn-secondary {
-      font-size: 14px;
-      color: lighten($black, 30%);
-      cursor: pointer;
-      text-decoration: underline;
-
-      &:hover {
-        color: $black;
-      }
-
-      &.checklist-edit-btn {
-        margin-top: $space-small;
-      }
-    }
-
-    .task-form {
-      .edit-btn {
-        margin-bottom: $space-xsmall;
-      }
-    }
-
-    .date {
-      margin-top: $space-small * 2;
-      font-size: 14px;
-      color: lighten($black, 30%);
-    }
-
-    .form-btns {
-      display: flex;
-      align-items: flex-end;
-      justify-content: space-between;
-      margin-top: $space-small;
-
-      .form-submit {
-        margin-top: 0;
-      }
-
-      .delete-btn {
-
-      }
-    }
-  }
-
-  .promise-success {
-    text-align: center;
-
-    .success-msg {
-      margin: $space-small * 2 0;
-      font-size: 20px;
-    }
-
-    .success-points {
-      margin-bottom: $space-small * 2;
-      font-size: 40px;
+    .label-item {
+      width: 60px;
 
       i {
-        margin-right: 4px;
-      }
-    }
-
-    .success-img {
-      width: 300px;
-      height: 200px;
-      margin: 0 auto ;
-    }
-
-    .success-name {
-      margin: $space-xsmall 0 $space-small * 2 0;
-      font-size: 20px;
-    }
-
-    .success-icon {
-      margin-bottom: $space-small * 2;
-      font-size: 30px;
-    }
-
-    .success-btn {
-      @include button($green);
-      margin-bottom: $space-small * 2;
-      font-size: 20px;
-    }
-  }
-
-  .habit-list {
-
-    .habit-item {
-      width: 100%;
-      margin-bottom: $space-small;
-    }
-
-    .habit-content {
-      display: flex;
-      justify-content: space-between;
-
-      .habit-text {
-        width: 70%;
-
-        .habit-credits-wrapper {
-          margin-top: $space-xsmall;
-
-          .habit-credits {
-            i {
-              margin-right: 4px;
-            }
-          }
-
-          .habit-bonus {
-            margin-left: 4px;
-            padding: 2px 8px;
-            background-color: $green;
-            color: $white;
-            border-radius: 6px;
-          }
-        }
-      }
-
-      .habit-btn {
-        width: 30%;
-
-        button {
-          @include button($green);
-          margin: auto;
-          padding: 0;
-          width: 60px;
-          height: 60px;
-          border-radius: 50%;
-          border: 3px solid $white;
-          box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 3px rgba(0,0,0,.24);
-        }
-
-        &.checked {
-          button {
-            background-color: $dark-gray;
-            box-shadow: none;
-            cursor: default;
-          }
-        }
-      }
-    }
-
-    .habit-streak {
-      height: 10px;
-      margin-top: $space-small;
-      background-color: $gray;
-
-      .streak-item {
-        display: inline-block;
-        height: 10px;
-        width: 1 / 7 * 100% - 6% / 7;
-        margin-right: 1%;
-        background-color: $green;
-        vertical-align: top;
-
-        &:last-child {
-          margin-right: 0;
-        }
-      }
-
-      &.streak {
-
-        .streak-item {
-          background-color: $orange;
-        }
+        display: block;
+        margin-bottom: 4px;
+        font-size: 20px;
       }
     }
   }
 }
 
+.promise-list {
+  .promise-item {
+    position: relative;
+    height: 100%;
+    cursor: pointer;
 
+    &:hover {
+      background-color: darken(white, 5%);
+      transition: all .3s;
+    }
+
+    .reward-points {
+
+      .reward-content {
+
+        i {
+          margin-right: 4px;
+        }
+      }
+    }
+
+    .progress-bar {
+      position: relative;
+      height: 10px;
+      margin-top: $space-xsmall * 2;
+      background-color: $gray;
+      border-radius: 2px;
+
+      .progress-bar-current {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        background-color: $green;
+        border-radius: 2px;
+      }
+    }
+
+    .stamp-completed {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      bottom: 10px;
+      left: 10px;
+      opacity: .3;
+      color: $green;
+      font-size: 200px;
+      text-align: center;
+    }
+  }
+}
+
+.promise {
+
+  .checkbox-wrapper {
+    margin-bottom: $space-xsmall;
+
+    &:first-child {
+      margin-top: $space-xsmall * 2;
+    }
+
+    .checkbox {
+      width: 36px;
+      appearance: none;
+      cursor: pointer;
+
+      &:focus {
+        outline: none;
+      }
+
+      &:before {
+        display: inline-block;
+        font-family: FontAwesome;
+        font-size: 30px;
+        content: "\f096";
+        font-weight: 200;
+        color: darken($dark-gray, 10%);
+      }
+
+      &:checked:before {
+        font-family: FontAwesome;
+        content: "\f046";
+        color: $green;
+      }
+
+      &.last {
+        margin-right: -4px;
+      }
+    }
+
+    .checkbox-static {
+      width: 36px;
+      cursor: pointer;
+      color: $green;
+      font-size: 30px;
+    }
+
+    &.checklist {
+      margin-bottom: 2px;
+
+      .checkbox,
+      .checkbox-static {
+        width: 20px;
+        margin-right: 6px;
+
+        &:before {
+          vertical-align: middle;
+          font-size: 24px;
+        }
+      }
+
+      .checkbox-static {
+        vertical-align: middle;
+        font-size: 24px;
+      }
+
+      .label-static {
+        vertical-align: middle;
+      }
+    }
+
+    &.checklist-flex {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .delete-btn {
+        display: none;
+        font-size: 20px;
+        color: $dark-gray;
+        cursor: pointer;
+      }
+
+      &:hover .delete-btn {
+        display: block;
+      }
+    }
+
+    &.punch-card {
+      margin-top: $space-small;
+    }
+  }
+
+  .btn-secondary {
+    &.checklist-edit-btn {
+      margin-top: $space-small;
+    }
+  }
+
+  .task-form {
+    .edit-btn {
+      margin-bottom: $space-xsmall;
+    }
+  }
+}
+
+.promise-success {
+  text-align: center;
+
+  .success-msg {
+    margin: $space-small * 2 0;
+    font-size: 20px;
+  }
+
+  .success-points {
+    margin-bottom: $space-small * 2;
+    font-size: 40px;
+
+    i {
+      margin-right: 4px;
+    }
+  }
+
+  .success-img {
+    width: 300px;
+    height: 200px;
+    margin: 0 auto ;
+  }
+
+  .success-name {
+    margin: $space-xsmall 0 $space-small * 2 0;
+    font-size: 20px;
+  }
+
+  .success-icon {
+    margin-bottom: $space-small * 2;
+    font-size: 30px;
+  }
+
+  .success-btn {
+    @include button($green);
+    margin-bottom: $space-small * 2;
+    font-size: 20px;
+  }
+}
