--- a/resources/assets/sass/helpers/_helpers.scss
+++ b/resources/assets/sass/helpers/_helpers.scss
@@ -105,6 +105,41 @@
   }
 }
 
+.o-list-3 {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-start;
+
+  .o-list-item {
+    flex: 0 1 1/3 * 100%;
+    padding: 0 $space-small $space-small 0;
+
+    &:nth-child(3n) {
+      padding-right: 0;
+    }
+  }
+
+  @media (max-width: $breakpoint-md) {
+    .o-list-item {
+      flex: 0 1 50%;
+
+      &:nth-child(2n) {
+        padding-right: 0;
+      }
+    }
+  }
+
+  @media (max-width: $breakpoint-xs) {
+    align-items: stretch;
+    flex-flow: column wrap;
+
+    .o-list-item {
+      flex: 1;
+      padding-right: 0;
+    }
+  }
+}
+
 .o-overlay {
   position: fixed;
   top: 0;
