--- a/resources/assets/sass/pages/_habits.scss
+++ b/resources/assets/sass/pages/_habits.scss
@@ -21,18 +21,22 @@
       .habit-credits-wrapper {
         margin-top: $space-xsmall;
 
-        .habit-credits {
-          i {
-            margin-right: 4px;
-          }
+        i {
+          margin-right: 4px;
         }
 
         .habit-bonus {
           margin-left: 4px;
           padding: 2px 8px;
-          background-color: $green;
+          background-color: $orange;
           color: $white;
           border-radius: 6px;
+        }
+
+        .check-count,
+        .streak-count {
+          margin-left: 6px;
+          color: $text-color-secondary;
         }
       }
     }
@@ -42,7 +46,7 @@
 
       button {
         @include button($green);
-        margin: $space-xsmall * 2 auto 0 auto;
+        margin: $space-xsmall * 2 auto;
         padding: 0;
         width: 60px;
         height: 60px;
@@ -51,11 +55,27 @@
         box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 3px rgba(0,0,0,.24);
       }
 
+      &.streak {
+        button {
+          background-color: $orange;
+
+          &:hover {
+            background-color: darken($orange, 10%);
+          }
+        }
+      }
+
       &.checked {
         button {
           background-color: $dark-gray;
           box-shadow: none;
           cursor: default;
+        }
+      }
+
+      &.streak.checked {
+        button {
+          background-color: lighten($orange, 20%);
         }
       }
     }
