--- a/resources/assets/sass/pages/_habits.scss
+++ b/resources/assets/sass/pages/_habits.scss
@@ -1,129 +1,114 @@
-.habit-list-wrapper {
+.habit-list {
 
-  .habit-list {
+  .habit-content {
     display: flex;
-    flex-flow: column wrap;
+    justify-content: space-between;
 
-    .habit-item {
-      width: 100%;
-      margin-bottom: $space-small;
-    }
+    .habit-text {
+      width: 70%;
 
-    @media (max-width: $breakpoint-md) {
-      flex-flow: row wrap;
+      .habit-credits-wrapper {
+        margin-top: $space-xsmall;
 
-      .habit-item {
-        flex: 0 1 50%;
-        padding: 0 $space-small $space-small 0;
+        i {
+          margin-right: 4px;
+        }
 
-        &:nth-child(2n) {
-          padding-right: 0;
+        .habit-bonus {
+          margin-left: 4px;
+          padding: 2px 8px;
+          background-color: $orange;
+          color: $white;
+          border-radius: 6px;
+        }
+
+        .check-count,
+        .streak-count {
+          margin-left: 8px;
+          color: $text-color-secondary;
         }
       }
     }
 
-    @media (max-width: $breakpoint-xs) {
-      flex-flow: column wrap;
+    .habit-btn {
+      width: 30%;
 
-      .habit-item {
-        flex: 1;
-        padding-right: 0;
-      }
-    }
-
-    .habit-content {
-      display: flex;
-      justify-content: space-between;
-
-      .habit-text {
-        width: 70%;
-
-        .habit-credits-wrapper {
-          margin-top: $space-xsmall;
-
-          i {
-            margin-right: 4px;
-          }
-
-          .habit-bonus {
-            margin-left: 4px;
-            padding: 2px 8px;
-            background-color: $orange;
-            color: $white;
-            border-radius: 6px;
-          }
-
-          .check-count,
-          .streak-count {
-            margin-left: 6px;
-            color: $text-color-secondary;
-          }
-        }
-      }
-
-      .habit-btn {
-        width: 30%;
-
-        button {
-          @include button($green);
-          margin: $space-xsmall * 2 auto;
-          padding: 0;
-          width: 60px;
-          height: 60px;
-          border-radius: 50%;
-          border: 3px solid $white;
-          box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 3px rgba(0,0,0,.24);
-        }
-
-        &.streak {
-          button {
-            background-color: $orange;
-
-            &:hover {
-              background-color: darken($orange, 10%);
-            }
-          }
-        }
-
-        &.checked {
-          button {
-            background-color: $dark-gray;
-            box-shadow: none;
-            cursor: default;
-          }
-        }
-
-        &.streak.checked {
-          button {
-            background-color: lighten($orange, 20%);
-          }
-        }
-      }
-    }
-
-    .habit-streak {
-      height: 10px;
-      margin-top: $space-small;
-      background-color: $gray;
-
-      .streak-item {
-        display: inline-block;
-        height: 10px;
-        width: 1 / 7 * 100% - 6% / 7;
-        margin-right: 1%;
-        background-color: $green;
-        vertical-align: top;
-
-        &:last-child {
-          margin-right: 0;
-        }
+      button {
+        @include button($green);
+        margin: $space-xsmall * 2 auto;
+        padding: 0;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        border: 3px solid $white;
+        box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 3px rgba(0,0,0,.24);
       }
 
       &.streak {
-
-        .streak-item {
+        button {
           background-color: $orange;
+
+          &:hover {
+            background-color: darken($orange, 10%);
+          }
         }
+      }
+
+      &.checked {
+        button {
+          background-color: $dark-gray;
+          box-shadow: none;
+          cursor: default;
+        }
+      }
+
+      &.streak.checked {
+        button {
+          background-color: lighten($orange, 20%);
+        }
+      }
+    }
+  }
+
+  .habit-streak {
+    height: 10px;
+    margin-top: $space-small;
+
+    .streak-item {
+      display: inline-block;
+      height: 10px;
+      width: 1 / 7 * 100% - 6% / 7;
+      margin-right: 1%;
+      background-color: $dark-gray;
+      vertical-align: top;
+
+      &.active {
+        background-color: $green;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+
+    &.streak {
+      .streak-item {
+        background-color: $orange;
+      }
+    }
+  }
+
+  .habit-streak.challenge-progress {
+    display: flex;
+    flex-flow: row wrap;
+
+    .streak-item {
+      flex: 1;
+    }
+
+    &.streak {
+      .streak-item {
+        background-color: $orange;
       }
     }
   }
