Add restart challenge button

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,6 +19,7 @@
 @import "pages/top_nav";
 @import "pages/dashboard";
 @import "pages/habits";
+@import "pages/challenge";
 @import "pages/promises";
 @import "pages/wishes";
 @import "pages/wish_tickets";
