--- a/resources/assets/sass/helpers/_mixins.scss
+++ b/resources/assets/sass/helpers/_mixins.scss
@@ -15,6 +15,7 @@
   font-family: $font-family-text;
   text-align: center;
   color: $white;
+  text-transform: capitalize;
 
   &:hover {
     background-color: darken($color, 10%);
