--- a/resources/assets/sass/pages/_wishes.scss
+++ b/resources/assets/sass/pages/_wishes.scss
@@ -87,6 +87,7 @@
       position: relative;
       height: 36px;
       padding: 0;
+      overflow: hidden;
 
       &:hover {
         .background {
@@ -157,6 +158,7 @@
 
         .credits {
           .credits-item {
+            display: inline-block;
             margin-right: 6px;
             padding: 4px 8px;
             background-color: $green;
@@ -173,6 +175,33 @@
         i {
           margin-right: 4px;
         }
+      }
+    }
+
+    .progress-bar {
+      display: flex;
+      justify-content: stretch;
+      height: $space-small * 2;
+      width: 80%;
+      margin: $space-xsmall * 4 auto 0 auto;
+      border-radius: 3px;
+      border: 2px solid $green;
+      overflow: hidden;
+      line-height: 26px;
+
+      .progress-bar-current,
+      .progress-bar-remaining {
+
+      }
+
+      .progress-bar-current {
+        background-color: $green;
+        color: #FFF;
+      }
+
+      .progress-bar-remaining {
+        flex-grow: 1;
+        color: $text-color-secondary;
       }
     }
   }
