--- a/resources/assets/sass/helpers/_helpers.scss
+++ b/resources/assets/sass/helpers/_helpers.scss
@@ -51,12 +51,29 @@
   }
 
   .o-card-img {
+    position: relative;
     height: 100px;
     overflow: hidden;
     border-radius: 3px;
 
     img {
       @include img-cover(100%);
+    }
+
+    .user-list {
+      position: absolute;
+      right: 4px;
+      bottom: 4px;
+
+      .user {
+        display: inline-block;
+        width: 30px;
+        height: 30px;
+        overflow: hidden;
+        border-radius: 50%;
+        margin-left: 4px;
+        border: 2px solid #fff;
+      }
     }
   }
 
