Add loots frontend

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,6 +20,7 @@
 @import "pages/dashboard";
 @import "pages/habits";
 @import "pages/challenge";
+@import "pages/loots";
 @import "pages/promises";
 @import "pages/wishes";
 @import "pages/wish_tickets";
