--- a/resources/assets/sass/variables/_colors.scss
+++ b/resources/assets/sass/variables/_colors.scss
@@ -7,6 +7,7 @@ $blue: #1c90f3;
 $red: #ea8b7b;
 $green: #42b983;
 $orange: #ffa520;
+$purple: #9A62FF;
 $light-gray: #f8f8f8;
 $gray: darken($light-gray, 5%);
 $dark-gray: darken($light-gray, 20%);
