--- a/resources/assets/sass/pages/_loots.scss
+++ b/resources/assets/sass/pages/_loots.scss
@@ -9,11 +9,6 @@
 
       .loot-icon {
         width: 70%;
-        padding: $space-xsmall;
-        border-radius: 3px;
-        color: #FFF;
-        font-size: 40px;
-        transition: all .3s;
       }
 
       .loot-count {
@@ -28,41 +23,63 @@
         line-height: 20px;
       }
     }
+  }
+}
 
-    &.legendary {
-      .loot-icon {
-        background-color: $orange;
-      }
+.loot-item {
+  .loot-icon {
+    padding: $space-xsmall;
+    border-radius: 3px;
+    color: #FFF;
+    font-size: 40px;
+    transition: all .3s;
+  }
+
+  &.legendary {
+    .loot-icon {
+      background-color: $orange;
+    }
+  }
+
+  &.epic {
+    .loot-icon {
+      background-color: $purple;
+    }
+  }
+
+  &.rare {
+    .loot-icon {
+      background-color: $blue;
+    }
+  }
+
+  &:hover {
+    &.legendary .loot-icon {
+      background-color: darken($orange, 10%);
     }
 
-    &.epic {
-      .loot-icon {
-        background-color: $purple;
-      }
+    &.epic .loot-icon {
+      background-color: darken($purple, 10%);
     }
 
-    &.rare {
-      .loot-icon {
-        background-color: $blue;
-      }
+    &.rare .loot-icon {
+      background-color: darken($blue, 10%);
     }
+  }
 
-    &:hover {
-      &.legendary .loot-icon {
-        background-color: darken($orange, 10%);
-      }
+  .loot-name {
+    margin-top: $space-xsmall;
+  }
+}
 
-      &.epic .loot-icon {
-        background-color: darken($purple, 10%);
-      }
+.loot-drop {
+  .loot-icon {
+    width: 60px;
+  }
 
-      &.rare .loot-icon {
-        background-color: darken($blue, 10%);
-      }
-    }
-
-    .loot-name {
-      margin-top: $space-xsmall;
-    }
+  .loot-name {
+    margin-bottom: $space-xsmall * 2;
+    font-weight: bold;
+    font-size: 16px;
   }
 }
