Add style for frozen habits

--- a/resources/assets/sass/pages/_habits.scss
+++ b/resources/assets/sass/pages/_habits.scss
@@ -108,4 +108,12 @@
       }
     }
   }
+
+  .frozen {
+    .habit-streak .streak-item,
+    .habit-credits-wrapper .habit-bonus,
+    .habit-btn button {
+        background-color: $blue !important;
+    }
+  }
 }
